--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -127,16 +127,38 @@ img{
   float: left;
 }
 
+.books_view{
+  width: 700px;
+  padding: 20px;
+}
+
 .tile .h5{
   font-weight: bold !important;
 }
 
-.form-container-lobby{
+.tile .card-text{
+  max-height: 150px !important;
+  overflow: auto !important;
+  text-overflow: ellipsis !important;
+  text-align: justify !important;
+}
+.tile button{
+  margin: 5px 4px !important;
+}
+
+.tile .card-subtitle{
+  font-size: 12px !important;
+  color: #5a5959 !important;
+  margin-bottom: 10px !important;
+}
+
+.form-container-books{
     border: 1px solid #ccc;
     top: 50%;
     position: absolute;
-    transform: translate(0px, -50%);
+    transform: translate(-10%, -50%);
     padding: 23px;
+    width:80%;
 }
 
 .b_transparent{
