--- a/views/layout.dust
+++ b/views/layout.dust
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>FireCompass</title>
+<title>Groupon</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="msapplication-TileColor" content="#ffc40d">
