commit for exam

--- a/views/layout.dust
+++ b/views/layout.dust
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Groupon</title>
+<title>Shopup</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="msapplication-TileColor" content="#ffc40d">
@@ -16,24 +16,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display ">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
 
-{^showLoader}
-<!--[if lt IE 9]>
-<script src="assets/js/html5shiv.min.js"></script>
-<script src="assets/js/respond.min.js"></script>
-<![endif]-->
-{:else}
 <link rel="stylesheet" type="text/css" href="/assets/css/error.css">
-{/showLoader}
 </head>
 <body class="{errorClass}">
-{^showLoader}
-<div id="preloader" class="preloader">
-  <div id="status">&nbsp;</div>
-</div>
-{/showLoader}
 {+body /}
-{^showLoader}
-{>"requirejs_include" /}
-{/showLoader}
 </body>
 </html>
